--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="character-content">
             <img id="mirinteaImage" src="mirintea/default.png" alt="Mirintea">
             <div class="dialogue-box">
-                <p id="mirinteaDialogue">ねぇ、みつき？今日こそ勝つから覚悟して？♡</p>
+                <p id="mirinteaDialogue">ねぇ、{name}？今日こそ勝つから覚悟して？♡</p>
             </div>
         </div>
     </div>
