--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <span class="close-btn" id="closeBtn">×</span>
         </div>
         <div class="character-content">
-            <img id="mirinteaImage" src="mirintea/default.png" alt="Mirintea">
+            <img id="mirinteaImage" src="/mirintea/default.png" alt="Mirintea">
             <div class="dialogue-box">
                 <p id="mirinteaDialogue">ねぇ、{name}？今日こそ勝つから覚悟して？♡</p>
             </div>
