--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <meta name="twitter:description" content="みりんてゃと対戦するダブルソリティアゲーム。クラシックなKlondikeソリティアをAIキャラクターみりんてゃと対戦できます。">
     <meta name="twitter:image" content="https://mirintea-solitaire.vercel.app/mirintea/default.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <title>みりんてゃソリティア - AIキャラクターと対戦するソリティアゲーム</title>
     <link rel="stylesheet" href="style.css">
 </head>
