feat: ホーム画面追加時のアプリアイコンを設定

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta name="twitter:image" content="https://mirintea-solitaire.vercel.app/mirintea/default.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/mirintea/default.png">
+    <link rel="icon" href="/mirintea/default.png">
     <title>みりんてゃソリティア - AIキャラクターと対戦するソリティアゲーム</title>
     <link rel="stylesheet" href="style.css">
 </head>
