--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <meta name="twitter:image" content="https://mirintea-solitaire.vercel.app/mirintea/default.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="apple-touch-icon" href="/mirintea/default.png">
-    <link rel="icon" href="/mirintea/default.png">
     <title>みりんてゃソリティア - AIキャラクターと対戦するソリティアゲーム</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -141,8 +139,7 @@
 
     <!-- Mirintea Character Window -->
     <div class="character-window" id="mirinteaWindow">
-        <div class="character-header">
-            <span class="drag-handle">↕</span>
+        <div class="character-header drag-handle" id="mirinteaHeader">
             <span class="close-btn" id="closeBtn">×</span>
         </div>
         <div class="character-content">
