--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="b7ayC_ApkqZfpMCdnvnmZPQtpDMW8FATSpv0q1T2uV4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="みりんてゃと対戦するダブルソリティアゲーム。クラシックなKlondikeソリティアをAIキャラクターみりんてゃと対戦できます。">
     <meta name="keywords" content="ソリティア, カードゲーム, みりんてゃ, 対戦ゲーム, Klondike, ソロゲーム">
